########################################
# Page Analyzer in progress
########################################
- custom.js: fixed decodeURIComponent errors
- code cleanup
-fixed log format
- fixed first analysis returns nothing.
- support multi-threading 

########################################
# Page Analyzer v 0.8
########################################
- Added exception propagation for to end user for exceptions thrown by custom_yslow.js
- Rule paduplicatedrequests: Check for duplicated requests
- Fixed YSlow "ignoring" duplicated requests

########################################
# Page Analyzer v 0.7
########################################
- Added custom content possibilities
- YSlow: decode URLs reverted as causing issues

########################################
# Page Analyzer v 0.6
########################################
- Analyze URL, use PhantomJS to get HAR JSON string
- YSlow: decode URLs and add page time to result

########################################
# Page Analyzer v 0.5
########################################
- Initial Version
- HAR Upload 
- REST API for HAR Upload