@@ -1,4 +1,2 @@
 
-- Add thread configuration
 - add redirect to main page
-- fix requestID, sessionID in javascript logs
