@@ -3,7 +3,10 @@
 # Server Settings
 ############################################################
 pa_server_port=8888
-pa_caching_file_enabled=false
+pa_caching_file_enabled=true
+
+# Number of maximum parallel analysis allowed
+pa_analysis_threads=10
 
 ############################################################
 # PageAnalyzer Settings
