@@ -6,6 +6,8 @@
 -fixed log format
 - fixed first analysis returns nothing.
 - support multi-threading 
+- Add thread count configuration
+- add redirect to base path
 
 ########################################
 # Page Analyzer v 0.8
